# langcheck

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  blueprint.md  deny.toml  instructions.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/langcheck-app/: Cargo.toml  build.rs
crates/langcheck-app/src/: config.rs  coordinator.rs  diagnostics.rs  engine.rs  main.rs  persistence.rs  tsf_broker.rs
crates/langcheck-bench/: Cargo.toml
crates/langcheck-bench/src/: lib.rs
crates/langcheck-core/: Cargo.toml
crates/langcheck-core/src/: candidate.rs  classify.rs  confidence.rs  ipc.rs  lib.rs  rank.rs  session.rs  token.rs  undo.rs
crates/langcheck-core/tests/: corpus.rs
crates/langcheck-ipc/: Cargo.toml
crates/langcheck-ipc/src/: lib.rs
crates/langcheck-lexicon/: Cargo.toml
crates/langcheck-lexicon/data/: en-US.wordfreq.txt
crates/langcheck-lexicon/dictionaries/: en-US.fst  en-US.meta.json
crates/langcheck-lexicon/src/: compact_fst.rs  fake.rs  lib.rs  personal.rs  prototype_en_us.txt  windows_spell.rs
crates/langcheck-tsf/: Cargo.toml
crates/langcheck-tsf/src/: lib.rs
crates/langcheck-windows/: Cargo.toml
crates/langcheck-windows/src/: integrity.rs  ipc.rs  lib.rs  policy.rs  tsf.rs
crates/langcheck-windows/src/focus/: mod.rs
crates/langcheck-windows/src/input/: mod.rs  translate.rs
crates/langcheck-windows/src/replace/: mod.rs
crates/langcheck-windows/src/startup/: mod.rs
crates/langcheck-windows/src/tray/: mod.rs
docs/: codebase-guide.md  compatibility.md  privacy.md  threat-model.md
docs/adr/: 0000-template.md  0001-rust-as-the-primary-language.md  0002-mvp-keyboard-observer.md  0007-production-dictionary.md  0008-tsf-precision-adapter.md  0009-defer-context-grammar.md  README.md
packaging/: README.md  install.ps1  package.ps1  uninstall.ps1
packaging/installer/: README.md
scripts/: offline-audit.ps1
tests/corpora/: README.md
tests/windows-harness/: README.md
tools/dictionary-compiler/: Cargo.toml
tools/dictionary-compiler/src/: main.rs
