[package]
name = "langcheck-app"
description = "The LangCheck broker (langcheck.exe): coordinator, configuration, and local persistence."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Application workspace crate; not published to crates.io.
publish = false

[[bin]]
name = "langcheck"
path = "src/main.rs"

[dependencies]
langcheck-core = { path = "../langcheck-core" }
langcheck-ipc = { path = "../langcheck-ipc" }
langcheck-lexicon = { path = "../langcheck-lexicon" }
langcheck-windows = { path = "../langcheck-windows" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
