[package]
name = "langcheck-core"
description = "Platform-independent tokenization, session state, candidate ranking, and confidence policy for LangCheck."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Application workspace crate; not published to crates.io.
publish = false

[dependencies]

[dev-dependencies]
# Test-only: the deterministic fake lexicon for the corpus/precision tests. This
# is a dev-dependency cycle (lexicon depends on core), which Cargo permits.
langcheck-lexicon = { path = "../langcheck-lexicon", features = ["fake"] }
