[package]
name = "langcheck-lexicon"
description = "Dictionary lookup behind a small trait, backed by LangCheck's bundled offline compact FST lexicon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# Developer-only benchmark backend for the (rejected) Windows Spell Checking API.
# Never enabled in release builds; see blueprint.md Section 8.5.
dev-windows-spell = []

[dependencies]
langcheck-core = { path = "../langcheck-core" }
