[package]
name = "langcheck-windows"
description = "Windows integration for LangCheck: input observation, focus safety, replacement, tray UI, and startup."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Application workspace crate; not published to crates.io.
publish = false

[dependencies]
langcheck-core = { path = "../langcheck-core" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Security",
]
